applications/pymp/pymp_prometheus/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pymp-prometheus
  name: pymp-prometheus
  namespace: pymp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pymp-prometheus
  template:
    metadata:
      labels:
        app: pymp-prometheus
    spec:
      containers:
      - name: pymp-prometheus
        image: prom/prometheus
        imagePullPolicy: Always
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus/prometheus.yml
            subPath: prometheus.yml
      volumes:
        - name: config-volume
          configMap:
            name: pymp-prometheus
