applications/pymp/pymp_prometheus/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymp-prometheus
  namespace: pymp
  labels:
    app: pymp-prometheus
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pymp-prometheus
