applications/pymp/pymp_prometheus/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pymp-prometheus
  namespace: pymp
spec:
  ingressClassName: traefik-public
  rules:
  - host: prom.pymp.labrats.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pymp-prometheus
            port:
              number: 9090
